LIBZMQ_DIST = vs2008/libzmq.sln \
              vs2008/libzmq/libzmq.vcproj \
              vs2010/libzmq.sln \
              vs2010/libzmq/libzmq.vcxproj \
              vs2010/libzmq/libzmq.vcxproj.filters \
              vs2010/libzmq/libzmq.props \
              vs2010/libzmq/libzmq.xml \
              vs2010/libzmq.import.props \
              vs2010/libzmq.import.xml \
              vs2010/libsodium.import.props \
              vs2010/libsodium.import.xml \
              vs2012/libzmq.sln \
              vs2012/libzmq/libzmq.vcxproj \
              vs2012/libzmq/libzmq.vcxproj.filters \
              vs2012/libzmq/libzmq.props \
              vs2012/libzmq/libzmq.xml \
              vs2012/libzmq.import.props \
              vs2012/libzmq.import.xml \
              vs2012/libsodium.import.props \
              vs2012/libsodium.import.xml \
              vs2013/libzmq.sln \
              vs2013/libzmq/libzmq.vcxproj \
              vs2013/libzmq/libzmq.vcxproj.filters \
              vs2013/libzmq/libzmq.props \
              vs2013/libzmq/libzmq.xml \
              vs2013/libzmq.import.props \
              vs2013/libzmq.import.xml \
              vs2013/libsodium.import.props \
              vs2013/libsodium.import.xml \
              platform.hpp errno.cpp errno.hpp resource.h resource.rc

PERF_DIST = vs2008/c_local_lat/c_local_lat.vcproj \
            vs2008/c_local_thr/c_local_thr.vcproj \
            vs2008/c_remote_lat/c_remote_lat.vcproj \
            vs2008/c_remote_thr/c_remote_thr.vcproj \
            vs2008/inproc_lat/inproc_lat.vcproj \
            vs2008/inproc_thr/inproc_thr.vcproj \
            vs2010/c_local_lat/c_local_lat.vcxproj \
            vs2010/c_local_thr/c_local_thr.vcxproj \
            vs2010/c_remote_lat/c_remote_lat.vcxproj \
            vs2010/c_remote_thr/c_remote_thr.vcxproj \
            vs2010/inproc_lat/inproc_lat.vcxproj \
            vs2010/inproc_thr/inproc_thr.vcxproj \
            vs2010/c_local_lat/c_local_lat.props \
            vs2010/c_local_thr/c_local_thr.props \
            vs2010/c_remote_lat/c_remote_lat.props \
            vs2010/c_remote_thr/c_remote_thr.props \
            vs2010/inproc_lat/inproc_lat.props \
            vs2010/inproc_thr/inproc_thr.props \
            vs2012/c_local_lat/c_local_lat.vcxproj \
            vs2012/c_local_thr/c_local_thr.vcxproj \
            vs2012/c_remote_lat/c_remote_lat.vcxproj \
            vs2012/c_remote_thr/c_remote_thr.vcxproj \
            vs2012/inproc_lat/inproc_lat.vcxproj \
            vs2012/inproc_thr/inproc_thr.vcxproj \
            vs2012/c_local_lat/c_local_lat.props \
            vs2012/c_local_thr/c_local_thr.props \
            vs2012/c_remote_lat/c_remote_lat.props \
            vs2012/c_remote_thr/c_remote_thr.props \
            vs2012/inproc_lat/inproc_lat.props \
            vs2012/inproc_thr/inproc_thr.props \
            vs2013/c_local_lat/c_local_lat.vcxproj \
            vs2013/c_local_thr/c_local_thr.vcxproj \
            vs2013/c_remote_lat/c_remote_lat.vcxproj \
            vs2013/c_remote_thr/c_remote_thr.vcxproj \
            vs2013/inproc_lat/inproc_lat.vcxproj \
            vs2013/inproc_thr/inproc_thr.vcxproj \
            vs2013/c_local_lat/c_local_lat.props \
            vs2013/c_local_thr/c_local_thr.props \
            vs2013/c_remote_lat/c_remote_lat.props \
            vs2013/c_remote_thr/c_remote_thr.props \
            vs2013/inproc_lat/inproc_lat.props \
            vs2013/inproc_thr/inproc_thr.props

PROPERTIES_DIST = properties/Common.props \
                  properties/Console.props \
                  properties/ConsoleDebugDynamic.props \
                  properties/ConsoleDebugLinkTimeCodeGeneration.props \
                  properties/ConsoleDebugStatic.props \
                  properties/ConsoleReleaseDynamic.props \
                  properties/ConsoleReleaseLinkTimeCodeGeneration.props \
                  properties/ConsoleReleaseStatic.props \
                  properties/Debug.props \
                  properties/Dynamic.props \
                  properties/DynamicDebug.props \
                  properties/DynamicRelease.props \
                  properties/LinkTimeCodeGeneration.props \
                  properties/Release.props \
                  properties/Static.props \
                  properties/StaticDebug.props \
                  properties/StaticDebugLinkTimeCodeGeneration.props \
                  properties/StaticLinkTimeCodeGeneration.props \
                  properties/StaticRelease.props \
                  properties/StaticReleaseLinkTimeCodeGeneration.props \
                  properties/Win32.props \
                  properties/x64.props

PRECOMPILED_DIST = ../../src/precompiled.hpp \
                   ../../src/precompiled.cpp

EXTRA_DIST = $(LIBZMQ_DIST) $(PERF_DIST) $(PROPERTIES_DIST) $(PRECOMPILED_DIST)